# orcs-cli

./: .codedash.lua  .gitignore  .luarc.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  orcs-lint.toml
.github/workflows/: ci.yml  metrics.yml  pr-metrics.yml
crates/orcs-acp/: Cargo.toml
crates/orcs-acp/src/: agent.rs  convert.rs  lib.rs  server.rs
crates/orcs-app/: Cargo.toml  build.rs
crates/orcs-app/builtins/: agent_mgr.lua  concierge.lua  console_metrics.lua  delegate_worker.lua  foundation_manager.lua  help.lua  life_game.lua  lua_sandbox.lua  manager_worker.lua  profile_manager.lua  shell.lua  subagent.lua  tool.lua  worker_child.lua
crates/orcs-app/builtins/mcp_manager/: init.lua
crates/orcs-app/builtins/skill_manager/: init.lua  skill_loader.lua  skill_registry.lua
crates/orcs-app/src/: app.rs  builtins.rs  cli_overrides.rs  error.rs  lib.rs  printer_slot.rs
crates/orcs-app/src/app/: builder.rs  mod.rs
crates/orcs-auth/: Cargo.toml
crates/orcs-auth/src/: capability.rs  error.rs  grant.rs  lib.rs  permission.rs  policy.rs  privilege.rs  resource.rs  session.rs
crates/orcs-cli/: Cargo.toml
crates/orcs-cli/examples/: console_io.rs  echo_component.rs  package_decorator.rs  stop_resume.rs
crates/orcs-cli/src/: main.rs  tracing_writer.rs
crates/orcs-cli/tests/: e2e_basic_cli.rs  e2e_command_mode.rs  e2e_snapshot.rs  e2e_supervisor.rs
crates/orcs-cli/tests/common/: mod.rs
crates/orcs-component/: Cargo.toml
crates/orcs-component/src/: capability.rs  child.rs  component.rs  context.rs  emitter.rs  error.rs  interrupt.rs  lib.rs  package.rs  snapshot.rs  status.rs  testing.rs  tool.rs  traits.rs
crates/orcs-event/: Cargo.toml
crates/orcs-event/src/: category.rs  error.rs  lib.rs  request.rs  signal.rs
crates/orcs-hook/: Cargo.toml
crates/orcs-hook/src/: action.rs  config.rs  context.rs  error.rs  fql.rs  hook.rs  lib.rs  point.rs  registry.rs
crates/orcs-lint/: Cargo.toml
crates/orcs-lint/src/: allowance.rs  analyzer.rs  config.rs  context.rs  lib.rs  main.rs  types.rs
crates/orcs-lint/src/rules/: layer_dep.rs  mod.rs  no_panic.rs  no_silent_err.rs  no_unwrap.rs
crates/orcs-lua/: Cargo.toml
crates/orcs-lua/scripts/: agent_mgr.lua  claude_cli.lua  code_agent.lua  echo.lua  echo_emitter.lua  manager_worker.lua  profile_manager.lua  shell.lua  skill_manager.lua  spawner_child.lua  subagent.lua  tool.lua
crates/orcs-lua/scripts/lib/: skill_catalog.lua  skill_loader.lua  skill_registry.lua
crates/orcs-lua/scripts/skill_manager/: format_adapter.lua  init.lua  skill_catalog.lua
crates/orcs-lua/src/: builtin_tools.rs  cap_tools.rs  child.rs  component.rs  context_wrapper.rs  embedded.rs  error.rs  hook_helpers.rs  http_command.rs  kill_flag.rs  lib.rs  llm_adapter.rs  llm_command.rs  loader.rs  lua_env.rs  orcs_helpers.rs  resolve_loop.rs  sandbox_eval.rs  sanitize.rs  scenario.rs  testing.rs  tool_registry.rs  tools.rs  types.rs
crates/orcs-lua/src/component/: ctx_fns.rs  emitter_fns.rs  tests.rs
crates/orcs-lua/src/component/ctx_fns/: comm_fns.rs  exec_fns.rs  mod.rs  spawn_fns.rs
crates/orcs-lua/src/llm_command/: mod.rs  provider.rs  resolve.rs  retry.rs  session.rs
crates/orcs-lua/tests/: agent_mgr_react_tests.rs  async_kill_verification.rs  concierge_pattern_tests.rs  life_game_integration.rs  lspec_builtins.rs  lua_harness_tests.rs  manager_child_integration.rs  mcp_manager_tests.rs  prompt_placement_tests.rs  scenario_runner.rs  skill_manager_tests.rs  supervisor_pattern_tests.rs  tools_integration.rs
crates/orcs-lua/tests/scenarios/: echo_basic.lua  embedded_echo.lua  hil_approval.lua
crates/orcs-mcp/: Cargo.toml
crates/orcs-mcp/src/: config.rs  error.rs  lib.rs  manager.rs
crates/orcs-runtime/: Cargo.toml
crates/orcs-runtime/src/: board.rs  lib.rs  sandbox.rs  work_dir.rs
crates/orcs-runtime/src/auth/: blocked_patterns.rs  checker.rs  command_check.rs  grant_store.rs  mod.rs  privilege.rs  session.rs
crates/orcs-runtime/src/channel/: channel.rs  client.rs  command.rs  config.rs  error.rs  manager.rs  mod.rs  runner.rs  traits.rs  world.rs
crates/orcs-runtime/src/channel/runner/: base.rs  child_context.rs  child_spawner.rs  client.rs  common.rs  emitter.rs  mod.rs  paused_queue.rs  rpc.rs
crates/orcs-runtime/src/components/: echo_with_hil.rs  hil.rs  human_channel.rs  io_bridge.rs  io_bridge_channel.rs  mod.rs  noop.rs
crates/orcs-runtime/src/config/: error.rs  loader.rs  mod.rs  profile.rs  resolver.rs  types.rs
crates/orcs-runtime/src/engine/: engine.rs  error.rs  eventbus.rs  mod.rs  package.rs  session.rs
crates/orcs-runtime/src/io/: console.rs  input.rs  mod.rs  output.rs  parser.rs  port.rs  renderer.rs  types.rs
crates/orcs-runtime/src/session/: asset.rs  error.rs  local.rs  mod.rs  store.rs
crates/orcs-runtime/tests/: child_spawning_tests.rs  component_harness_tests.rs  io_integration.rs
crates/orcs-types/: Cargo.toml
crates/orcs-types/benches/: principal_clone.rs
crates/orcs-types/src/: construct.rs  error.rs  id.rs  intent.rs  lib.rs  principal.rs  scope.rs
docs/adr/: 001-permission-model-redesign.md  002-hooks-implementation-plan.md  002-hooks-system-design.md
examples/skills/code-summary/: skill.lua
examples/skills/hello-world/: SKILL.md
types/: orcs.d.lua
