[workspace]
resolver = "2"
members = [
    # Plugin SDK Layer (external, stable)
    "crates/orcs-types",
    "crates/orcs-event",
    "crates/orcs-auth",
    "crates/orcs-component",
    # Hook Layer (between SDK and Runtime)
    "crates/orcs-hook",
    # Runtime Layer (internal)
    "crates/orcs-runtime",
    # Plugin Layer
    "crates/orcs-lua",
    # Application Layer
    "crates/orcs-app",
    # Frontend Layer
    "crates/orcs-cli",
    # Dev Tools
    "crates/orcs-lint",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/orcs-cli"

[workspace.dependencies]
# Plugin SDK Layer
orcs-types = { path = "crates/orcs-types" }
orcs-event = { path = "crates/orcs-event" }
orcs-auth = { path = "crates/orcs-auth" }
orcs-component = { path = "crates/orcs-component" }
# Hook Layer
orcs-hook = { path = "crates/orcs-hook" }
# Runtime Layer
orcs-runtime = { path = "crates/orcs-runtime" }
# Plugin Layer
orcs-lua = { path = "crates/orcs-lua" }
# Application Layer
orcs-app = { path = "crates/orcs-app" }

# External dependencies
bitflags = { version = "2", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
serde_yaml = "0.9"
walkdir = "2"
globset = "0.4"
rustyline = "15"
tempfile = "3"
ureq = "3"
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"

[workspace.lints.rust]
unsafe_code = "deny"
