[workspace]
resolver = "2"
members = [
    # Plugin SDK Layer (external, stable)
    "crates/orcs-types",
    "crates/orcs-event",
    "crates/orcs-auth",
    "crates/orcs-component",
    # Hook Layer (between SDK and Runtime)
    "crates/orcs-hook",
    # Runtime Layer (internal)
    "crates/orcs-runtime",
    # MCP Layer
    "crates/orcs-mcp",
    # Plugin Layer
    "crates/orcs-lua",
    # Application Layer
    "crates/orcs-app",
    # Frontend Layer
    "crates/orcs-cli",
    # Dev Tools
    "crates/orcs-lint",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/orcs-cli"
readme = "README.md"
authors = ["Yutaka Nishimura"]

[workspace.dependencies]
# Plugin SDK Layer
orcs-types = { path = "crates/orcs-types", version = "0.1.1" }
orcs-event = { path = "crates/orcs-event", version = "0.1.1" }
orcs-auth = { path = "crates/orcs-auth", version = "0.1.1" }
orcs-component = { path = "crates/orcs-component", version = "0.1.1" }
# Hook Layer
orcs-hook = { path = "crates/orcs-hook", version = "0.1.1" }
# Runtime Layer
orcs-runtime = { path = "crates/orcs-runtime", version = "0.1.1" }
# Plugin Layer
orcs-mcp = { path = "crates/orcs-mcp", version = "0.1.1" }
orcs-lua = { path = "crates/orcs-lua", version = "0.1.1" }
# Application Layer
orcs-app = { path = "crates/orcs-app", version = "0.1.1" }

# External dependencies
bitflags = { version = "2", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
serde_yaml = "0.9"
walkdir = "2"
globset = "0.4"
rustyline = { version = "15", features = ["derive"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"

[patch.crates-io]
rustyline = { git = "https://github.com/ynishi/rustyline.git", rev = "5e11edf" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Restriction lints (allow-by-default) — cherry-picked per project policy.
# These catch patterns that hide bugs or violate "parse, don't validate".
#
# unwrap_used / expect_used は orcs-lint OL002 が AST レベルで
# テスト/プロダクション区別付きで検知済みのため、Clippy側では有効化しない。
unreachable = "warn"
panic = "warn"
