[package]
name = "orcs-app"
description = "ORCS Application Layer - Re-exports and AppError"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orcs-types = { workspace = true }
orcs-event = { workspace = true }
orcs-component = { workspace = true }
orcs-runtime = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
