[package]
name = "orcs-app"
description = "ORCS Application Layer - Re-exports and AppError"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orcs-types = { workspace = true }
orcs-event = { workspace = true }
orcs-component = { workspace = true }
orcs-runtime = { workspace = true }
orcs-lua = { workspace = true }
mlua = { version = "0.10", features = ["lua54", "send"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
