[package]
name = "orcs-auth"
description = "Permission primitives for ORCS: Capability, Session, SandboxPolicy, PermissionPolicy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["orcs", "auth", "capability", "sandbox"]
categories = ["development-tools"]

[dependencies]
orcs-types = { workspace = true }

bitflags = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
