[package]
name = "orcs-cli"
description = "ORCS CLI - Hackable Agentic Shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orcs"
path = "src/main.rs"

[[example]]
name = "stop_resume"

[[example]]
name = "console_io"

[dependencies]
orcs-app = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
orcs-component = { workspace = true }
orcs-runtime = { workspace = true }
orcs-types = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
