[package]
name = "orcs-component"
description = "Component trait for ORCS CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["orcs", "component", "plugin", "agent"]
categories = ["development-tools"]

[dependencies]
orcs-types = { workspace = true }
orcs-event = { workspace = true }
orcs-auth = { workspace = true }
bitflags = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
