[package]
name = "orcs-event"
description = "Event system for ORCS CLI (Signal, Request, Response)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orcs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
