[package]
name = "orcs-hook"
version.workspace = true
edition.workspace = true
description = "Lifecycle hook definitions and configuration for ORCS"
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
test-utils = []

[dependencies]
orcs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }
