[package]
name = "orcs-hook"
description = "Lifecycle hook definitions and configuration for ORCS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["orcs", "hook", "lifecycle", "fql"]
categories = ["development-tools"]

[features]
test-utils = []

[dependencies]
orcs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
