[package]
name = "orcs-lint"
version.workspace = true
edition.workspace = true
description = "Architecture lint rules for ORCS (OL002: unwrap ban)"
license.workspace = true
repository.workspace = true

[[bin]]
name = "orcs-lint"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit", "parsing", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
miette = { version = "7", features = ["fancy"] }
glob = "0.3"
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
