[package]
name = "orcs-lua"
version = "0.1.0"
edition = "2021"
description = "Lua scripting support for ORCS components"
license = "MIT"

[dependencies]
# Lua bindings
mlua = { version = "0.10", features = ["lua54", "send", "async", "serialize"] }

# Internal crates
orcs-component = { path = "../orcs-component" }
orcs-event = { path = "../orcs-event" }
orcs-types = { path = "../orcs-types" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Async runtime (for non-blocking process execution)
tokio = { version = "1", features = ["process", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
# Required for mlua Send/Sync wrapper
unsafe_code = "allow"
