[package]
name = "orcs-lua"
version.workspace = true
edition.workspace = true
description = "Lua scripting support for ORCS components"
license.workspace = true
repository.workspace = true

[dependencies]
# Lua bindings
mlua = { version = "0.10", features = ["lua54", "send", "async", "serialize"] }

# Internal crates
orcs-component = { path = "../orcs-component" }
orcs-event = { path = "../orcs-event" }
orcs-hook = { path = "../orcs-hook" }
orcs-runtime = { path = "../orcs-runtime" }
orcs-types = { path = "../orcs-types" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File tools
regex = "1.11"
glob = "0.3"
globset = { workspace = true }
walkdir = { workspace = true }
tempfile = "3"

# Parsing
serde_yaml = { workspace = true }
toml = { workspace = true }

# Input sanitization
shell-sanitize = "0.1.0"
shell-sanitize-rules = "0.1.0"

# Synchronization (no-poison Mutex)
parking_lot = "0.12"

# Error handling
thiserror = "2.0"

# HTTP client (blocking, lightweight)
ureq = { workspace = true }

# Logging
tracing = "0.1"

# ID generation
uuid = { workspace = true }

# Async runtime (for non-blocking process execution)
tokio = { version = "1", features = ["process", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
# Required for mlua Send/Sync wrapper
unsafe_code = "allow"
