[package]
name = "orcs-lua"
description = "Lua scripting support for ORCS components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["orcs", "lua", "scripting", "plugin"]
categories = ["development-tools"]

[dependencies]
# Lua bindings
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "async", "serialize"] }

# Internal crates
orcs-component = { workspace = true }
orcs-event = { workspace = true }
orcs-hook = { workspace = true }
orcs-mcp = { workspace = true }
orcs-runtime = { workspace = true }
orcs-types = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File tools
regex = "1.11"
glob = "0.3"
globset = { workspace = true }
walkdir = { workspace = true }
tempfile = "3"

# Parsing
serde_yaml = { workspace = true }
toml = { workspace = true }

# Input sanitization
shell-sanitize = "0.1.0"
shell-sanitize-rules = "0.1.0"

# Synchronization (no-poison Mutex)
parking_lot = "0.12"

# Error handling
thiserror = "2.0"

# HTTP client
reqwest = { workspace = true }
bytes = "1"

# Logging
tracing = "0.1"

# ID generation
uuid = { workspace = true }

# Async runtime (process execution + reqwest bridge)
tokio = { version = "1", features = ["process", "rt", "rt-multi-thread"] }

[features]
test-utils = []

[dev-dependencies]
tokio = { workspace = true }
orcs-hook = { workspace = true, features = ["test-utils"] }
orcs-lua = { path = ".", features = ["test-utils"] }
mlua-lspec = "0.1"

[lints]
workspace = true
