[package]
name = "orcs-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) client integration for ORCS"

[dependencies]
orcs-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml = { workspace = true }

[lints]
workspace = true
