[package]
name = "orcs-runtime"
description = "ORCS Runtime - Internal implementation (auth, channel, engine)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orcs-types = { workspace = true }
orcs-event = { workspace = true }
orcs-auth = { workspace = true }
orcs-component = { workspace = true }
orcs-hook = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
