[package]
name = "orcs-types"
description = "Core types for ORCS CLI"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "principal_clone"
harness = false

[lints]
workspace = true
