[package]
name = "orcs-types"
description = "Core types for ORCS CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["orcs", "types", "component", "agent"]
categories = ["development-tools"]

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "principal_clone"
harness = false

[lints]
workspace = true
